--- a/pom.xml
+++ b/pom.xml
@@ -495,4 +495,11 @@
             </reporting>
         </profile>
     </profiles>
+    <distributionManagement>
+           <snapshotRepository>
+              <id>maven-snapshots</id>
+              <name>Releases</name>
+              <url>http://18.222.183.87:8081/repository/maven-snapshots/</url>
+           </snapshotRepository>
+    </distributionManagement>
 </project>
